--- a/pixo-ci/index.html
+++ b/pixo-ci/index.html
@@ -156,7 +156,7 @@ Listing – list view -->
                 <a class="nav-link" href="mon-compte-profile.html"><i class="far fa-user"></i> Mon compte</a>
               </li> 
               <li class="nav-item">
-                <a class="nav-link  active" href="mon-compte-profile.html"><i class="far fa-pocket"></i> Mon Djê</a>
+                <a class="nav-link  active" href="mon-compte-profile.html"><i class="fa-solid fa-wallet"></i> Mon Djê</a>
               </li> 
             </ul>
           </div>
