--- a/resultat-transaction-dje.html
+++ b/resultat-transaction-dje.html
@@ -277,7 +277,10 @@
 											<div class="d-flex flex-column flex-lg-row-auto w-auto w-lg-350px w-xl-550px w-xxl-650px py-12 py-md-14 px-10 px-md-20 pr-lg-0"> 
 												<div class="font-size-h4 mb-8 text-white">Rechercher une dépense en attente</div>
 												<!--begin::Form-->
-												<form class="d-flex flex-center py-2 pl-6 pr-2 bg-white rounded">
+												<form class="d-flex flex-center py-2 pl-6  pr-2 bg-white rounded">
+													
+													<input type="text" class="form-control border-0 font-weight-bold pl-2" placeholder="Entrez un code de référence" />
+
 													<div class="input-group-append">
 														
 														<button class="btn btn-primary d-flex" type="button"> <span class="svg-icon svg-icon-lg svg-icon-light">
