--- a/pixo-ci/index.html
+++ b/pixo-ci/index.html
@@ -220,15 +220,18 @@ Listing – list view -->
           <div class="modal-header border-0 text-center">
               <h5 class="modal-title" id="loginModalLabel"></h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-  <span aria-hidden="true">&times;</span>
+             <span aria-hidden="true">&times;</span>
   </button>
           </div>
           <div class="modal-body">
             <form class="form-row mt-4 align-items-center mb-4">
             
               <div class="form-group col-sm-12">
-                  <input type="text" class="form-control" placeholder="Code de votre portefeuille">
+                  <input type="text" class="form-control" placeholder="Montant à dépenser">
               </div>
+              <div class="form-group col-sm-12">
+                <input type="text" class="form-control" placeholder="Votre mot de pass">
+            </div>
               <div class="col-sm-12 text-center">
                   <button type="submit" class="btn-2 btn-primary btn-xl">Valider</button>
               </div>
