--- a/pixo-ci/pixo-location.html
+++ b/pixo-ci/pixo-location.html
@@ -379,7 +379,7 @@ banner -->
               <div class="row">
                 <div class="col-lg-4   mb-lg-0 order-lg-2 bg-gray-1">
                     <div class="sidebar">
-                        <div class="d-flex mb-3"> 
+                        <div class="d-flex mb-3 mt-3"> 
                             <span class="btn btn-dark col ml-0 b-radius-none" >Annonces à La une</span>
                         </div>
                         <div class=""> 
