--- a/encart-pub.html
+++ b/encart-pub.html
@@ -581,6 +581,25 @@
 						</div>
 					</a>
 
+					<a href="stat-id-commerciale.html" class="navi-item ">
+						<div class="navi-link">
+							<div class="symbol symbol-40 bg-light mr-3">
+								<div class="symbol-label">
+									<span class="svg-icon svg-icon-primary svg-icon-2x"><!--begin::Svg Icon | path:C:\wamp64\www\keenthemes\legacy\metronic\theme\html\demo9\dist/../src/media/svg/icons\Files\Folder-solid.svg--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1">
+										<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+											<rect x="0" y="0" width="24" height="24"/>
+											<path d="M3.5,21 L20.5,21 C21.3284271,21 22,20.3284271 22,19.5 L22,8.5 C22,7.67157288 21.3284271,7 20.5,7 L10,7 L7.43933983,4.43933983 C7.15803526,4.15803526 6.77650439,4 6.37867966,4 L3.5,4 C2.67157288,4 2,4.67157288 2,5.5 L2,19.5 C2,20.3284271 2.67157288,21 3.5,21 Z" fill="#000000"/>
+										</g>
+									</svg><!--end::Svg Icon--></span>
+								</div>
+							</div>
+							<div class="navi-text">
+								<div class="font-weight-bold">Registre des transactions</div>
+								<div class="text-muted">Statistique des payement</div>
+							</div>
+						</div>
+					</a>
+
 					<a href="enseignes-partenaires.html" class="navi-item">
 						<div class="navi-link">
 							<div class="symbol symbol-40 bg-light mr-3">
@@ -604,7 +623,7 @@
 						</div>
 					</a>
 
-					<a href="historique-dje.html" class="navi-item mb-8">
+					<a href="historique-dje.html" class="navi-item">
 						<div class="navi-link">
 							<div class="symbol symbol-40 bg-light mr-3">
 								<div class="symbol-label">
